perf: stream table_stats from MySQL; eliminate N+1 circuit breaker query
AnalyzerRunner previously called statsRepo.findAll() which buffered all
table_stats rows in memory, and called historyRepo per-table inside the
loop (N+1 queries for circuit breaker checks).

Changes:
- TableStatsRepository: add streamAll() returning Stream<TableStatsRow>
  with HINT_FETCH_SIZE=MIN_VALUE so MySQL streams rows via JDBC cursor
  instead of buffering the full result set in the driver
- TableOperationHistoryRepository: replace per-table findRecentByTableAndType
  with findAllByOperationType, loaded once and grouped in memory
- AnalyzerRunner: @Transactional to keep the JDBC cursor alive; single
  table_stats scan across all analyzers (not one scan per analyzer type);
  pre-load ops map and history map before opening the stream; circuit
  breaker check uses the pre-loaded map instead of querying per table

Memory footprint is now O(|active_ops| + |history_rows|), both naturally
bounded, regardless of total table count.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>